versions/v2.14/modules/de/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
= Cluster-Treiber
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/neue-benutzeranleitungen/authentifizierung-berechtigungen-und-globalen-konfiguration/über-die-bereitstellung-von-treibern/verwaltung-von-cluster-treibern.adoc 
:product-path: rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/benutzer/authn-und-authz/verwaltung-der-rollenbasierten-zugriffskontrolle-rbac/global-berechtigungen.adoc
:xref-hosted-k8s-clusters: xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/neue-benutzeranleitungen/authentifizierung-berechtigungen-und-global-konfiguration/verwaltung-der-rollenbasierten-zugriffskontrolle-rbac/global-berechtigungen.adoc 
:xref-hosted-k8s-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/index.adoc
endif::[]

Cluster-Treiber werden verwendet, um Cluster in einem {xref-hosted-k8s-clusters}[gehosteten Kubernetes-Anbieter], wie Google GKE, zu erstellen. Welche Cluster-Treiber beim Erstellen von Clustern angezeigt werden sollen, richtet sich nach dem Status des jeweiligen Cluster-Treibers. Nur `active` Cluster-Treiber werden als Option zum Erstellen von Clustern angezeigt. Standardmäßig wird Rancher mit mehreren vorhandenen Cluster-Treibern von Cloud-Anbietern ausgeliefert, aber Sie können auch benutzerdefinierte Cluster-Treiber zu Rancher hinzufügen.

Wenn es bestimmte Cluster-Treiber gibt, die Sie Ihren Benutzern nicht anzeigen möchten, können Sie diese Cluster-Treiber in Rancher deaktivieren, und sie werden nicht als Option für die Cluster-Erstellung angezeigt.

[#_managing_cluster_drivers]
== Verwaltung von Cluster-Treibern

[NOTE]
.Voraussetzungen:
====

Um Cluster-Treiber zu erstellen, zu bearbeiten oder zu löschen, benötigen Sie _eine_ der folgenden Berechtigungen:

* {xref-global-permissions}[Administrator globale Berechtigungen]
* {xref-global-permissions}#_benutzerdefinierte_global_berechtigungen[Benutzerdefinierte globale Berechtigungen] mit der {xref-global-permissions}[Verwalten von Cluster-Treibern] Rolle zugewiesen.
====


[#_activating_deactivating_cluster_drivers]
== Aktivieren/Deaktivieren von Cluster-Treibern

Standardmäßig aktiviert Rancher nur Treiber für die beliebtesten Cloud-Anbieter, Google GKE, Amazon EKS und Azure AKS. Wenn Sie einen Knoten-Treiber anzeigen oder ausblenden möchten, können Sie seinen Status ändern.

. Klicken Sie in der oberen linken Ecke auf *☰ > Cluster-Verwaltung*.
. Klicken Sie im linken Navigationsmenü auf *Treiber*.
. Wählen Sie im Tab *Cluster-Treiber* den Treiber aus, den Sie aktivieren oder deaktivieren möchten, und klicken Sie auf *⋮ > Aktivieren* oder *⋮ > Deaktivieren*.

[#_adding_custom_cluster_drivers]
== Hinzufügen von benutzerdefinierten Cluster-Treibern

Wenn Sie einen Cluster-Treiber verwenden möchten, den Rancher nicht standardmäßig unterstützt, können Sie den Treiber des Anbieters hinzufügen, um ihn zur Erstellung von _gehosteten_ Kubernetes-Clustern zu verwenden.

. Klicken Sie in der oberen linken Ecke auf *☰ > Clusterverwaltung*.
. Klicken Sie im linken Navigationsmenü auf *Treiber*.
. Klicken Sie im Tab *Cluster-Treiber* auf *Cluster-Treiber hinzufügen*.
. Vervollständigen Sie das Formular *Cluster-Treiber hinzufügen*. Klicken Sie dann auf *Erstellen*.

[#_developing_your_own_cluster_driver]
== Entwicklung Ihres eigenen Cluster-Treibers

Um einen Cluster-Treiber zu entwickeln, den Sie zu Rancher hinzufügen können, beziehen Sie sich bitte auf unser https://github.com/rancher-plugins/kontainer-engine-driver-example[Beispiel].
